--- a/index.html
+++ b/index.html
@@ -10,20 +10,144 @@
         }
     </style>
 </head>
+    
 <body>
-    <header>
+    <div id="intro" style="display: none">
+        
         <h1>Welcome to Our Survey</h1>
-    </header>
-    <main>
         <p>
             Thank you for participating in our survey. The survey consists of several pages. In the next page, you'll be presented with an Instagram feed. On the bottom of each page there is a 'next' button. On the last page is a 'submit' button, afterwards you receive the verification code.
         </p>
         <p>
             Please scroll through it as you would do normally. Later pages will ask you about your experience. Your participation is very important to us.
         </p>
-    </main>
-    <footer>
-        <a href="instagramfeed.html">Next</a>
-    </footer>
+        <button onclick="next()" class="button" style="margin: 0 auto;display: block;">Start survey</button><br><br>
+    </div>
+    <div id="i1" style="display: none">
+        <div class="phone_outer">
+         <div class="phone">
+            <div class="phone_inner">
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_0}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_1}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_2}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_3}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_4}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_5}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_6}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_7}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_8}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_9}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_10}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_11}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_12}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_13}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_14}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_15}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_16}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_17}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_18}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_top.jpg" width="100%"></img>
+              <img src="${image_19}" width="100%"></img>
+              <img src="https://instaimagessurvey.s3.us-east-2.amazonaws.com/insta_bottom.jpg" width="100%"></img><br><br>
+              <button onclick="next()" class="button" style="margin: 0 auto;display: block;">Start questionaire</button><br><br>
+            </div>
+          </div>
+          </div>
+    </div>
+    <div id="q_demographics"  style="display: none">
+      <h2>Please give us a little background about yourself</h2>
+      <p>What is your gender?</p>
+      <input type="radio" required id="gender_1" name="gender" value="1">
+      <label onclick="gender_1.checked = true">Female</label>
+      <input type="radio" required id="gender_2" name="gender" value="2">
+      <label onclick="gender_2.checked = true">Male</label>
+      <input type="radio" required id="gender_3" name="gender" value="3">
+      <label onclick="gender_3.checked = true">Other</label>
+      <input type="radio" required id="gender_4" name="gender" value="4">
+      <label onclick="gender_4.checked = true">Prefer not to say</label><br><br>
+
+      <p>Are you color blind?</p>
+      <input type="radio" required id="colorblindness_1" name="colorblindness" value="1">
+      <label onclick="colorblindness_2.checked = true">Yes</label>
+      <input type="radio" required id="colorblindness_2" name="colorblindness" value="2">
+      <label onclick="colorblindness_2.checked = true">No</label><br><br>
+
+      <p>How often are you using social media:</p>
+      <input type="radio" required id="social_media_usage_1" name="social_media_usage" value="1">
+      <label onclick="social_media_usage_1.checked = true">Never</label>
+      <input type="radio" required id="social_media_usage_2" name="social_media_usage" value="2">
+      <label onclick="social_media_usage_2.checked = true">Less than once daily</label>
+      <input type="radio" required id="social_media_usage_3" name="social_media_usage" value="3">
+      <label onclick="social_media_usage_3.checked = true">About once daily</label>
+      <input type="radio" required id="social_media_usage_4" name="social_media_usage" value="4">
+      <label onclick="social_media_usage_4.checked = true">Several times daily</label>
+      <input type="radio" required id="social_media_usage_5" name="social_media_usage" value="5">
+      <label onclick="social_media_usage_5.checked = true">Many times daily</label>
+      <input type="radio" required id="social_media_usage_6" name="social_media_usage" value="6">
+      <label onclick="social_media_usage_6.checked = true">All day long</label><br><br>
+
+      <p>Are you using Instagram:</p>
+      <input type="radio" required id="instagram_usage_1" name="instagram_usage" value="1">
+      <label onclick="instagram_usage_1.checked = true">Never</label>
+      <input type="radio" required id="instagram_usage_2" name="instagram_usage" value="2">
+      <label onclick="instagram_usage_2.checked = true">Only a few time daily</label>
+      <input type="radio" required id="instagram_usage_3" name="instagram_usage" value="3">
+      <label onclick="instagram_usage_3.checked = true">Many times daily</label>
+      <input type="radio" required id="instagram_usage_4" name="instagram_usage" value="4">
+      <label onclick="instagram_usage_4.checked = true">All day long</label>
+
+
+      <p>When purchasing, I focus mainly on the brand.</p>
+      <input type="radio" required id="brand_focus_1" name="brand_focus" value="1">
+      <label onclick="brand_focus_1.checked = true">Strongly disagree</label>
+      <input type="radio" required id="brand_focus_2" name="brand_focus" value="2">
+      <label onclick="brand_focus_2.checked = true">&nbsp;</label>
+      <input type="radio" required id="brand_focus_3" name="brand_focus" value="3">
+      <label onclick="brand_focus_3.checked = true">&nbsp;</label>
+      <input type="radio" required id="brand_focus_4" name="brand_focus" value="4">
+      <label onclick="brand_focus_4.checked = true">&nbsp;</label>
+      <input type="radio" required id="brand_focus_5" name="brand_focus" value="5">
+      <label onclick="brand_focus_5.checked = true">strongly agree</label>
+
+      <button onclick="next()" class="button" style="margin: 0 auto;display: block;">Continue with questionaire</button>
+    </div>
 </body>
 </html>
