--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
     
 <body>
-    <div id="intro" style="display: none">
+    <div id="intro">
         
         <h1>Welcome to Our Survey</h1>
         <p>
