--- a/index.html
+++ b/index.html
@@ -291,23 +291,23 @@
           </tr>
           <tr>
             <td><img src="https://recallstudy.s3.us-east-2.amazonaws.com/Disney.png" height="50px"></img></td>
-            <td onclick="question1_1.checked = true"><input type="radio" required id="question1_1" name="question0" value="0"></td>
-            <td onclick="question1_2.checked = true"><input type="radio" required id="question1_2" name="question0" value="1"></td>
+            <td onclick="question1_1.checked = true"><input type="radio" required id="question1_1" name="question0" value="0" onchange="checkAnswers()"></td>
+            <td onclick="question1_2.checked = true"><input type="radio" required id="question1_2" name="question0" value="1" onchange="checkAnswers()"></td>
           </tr>
           <tr>
             <td><img src="https://recallstudy.s3.us-east-2.amazonaws.com/Microsoft_29.png" height="50px"></img></td>
-            <td onclick="question2_1.checked = true"><input type="radio" required id="question2_1" name="question1" value="0"></td>
-            <td onclick="question2_2.checked = true"><input type="radio" required id="question2_2" name="question1" value="1"></td>
+            <td onclick="question2_1.checked = true"><input type="radio" required id="question2_1" name="question1" value="0" onchange="checkAnswers()"></td>
+            <td onclick="question2_2.checked = true"><input type="radio" required id="question2_2" name="question1" value="1" onchange="checkAnswers()"></td>
           </tr>
           <tr>
             <td><img src="https://recallstudy.s3.us-east-2.amazonaws.com/Tesla-Logo-No-Background.png" height="50px"></img></td>
-            <td onclick="question3_1.checked = true"><input type="radio" required id="question3_1" name="question2" value="0"></td>
-            <td onclick="question3_2.checked = true"><input type="radio" required id="question3_2" name="question2" value="1"></td>
+            <td onclick="question3_1.checked = true"><input type="radio" required id="question3_1" name="question2" value="0" onchange="checkAnswers()"></td>
+            <td onclick="question3_2.checked = true"><input type="radio" required id="question3_2" name="question2" value="1" onchange="checkAnswers()"></td>
           </tr>
           <tr>
             <td><img src="https://recallstudy.s3.us-east-2.amazonaws.com/Amazon.png" height="50px"></img></td>
-            <td onclick="question4_1.checked = true"><input type="radio" required id="question4_1" name="question3" value="0"></td>
-            <td onclick="question4_2.checked = true"><input type="radio" required id="question4_2" name="question3" value="1"></td>
+            <td onclick="question4_1.checked = true"><input type="radio" required id="question4_1" name="question3" value="0" onchange="checkAnswers()"></td>
+            <td onclick="question4_2.checked = true"><input type="radio" required id="question4_2" name="question3" value="1" onchange="checkAnswers()"></td>
           </tr>
         </table><br>
       <button onclick="next()" class="button">Start</button>
