--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
       <input type="radio" required id="brand_focus_5" name="brand_focus" value="5" onchange="checkAnswers()">
       <label onclick="brand_focus_5.checked = true">strongly agree</label>
 
-      <button onclick="next()" class="button" style="margin: 0 auto;display: block;" disabled="true">Continue with questionaire</button>
+      <button onclick="next()" class="button" style="margin: 0 auto;display: block;" disabled>Continue with questionaire</button>
     </div>
     <div id="att0"  style="display: none" class="page page3">
         <h2>Study Background</h2><br>
@@ -312,7 +312,7 @@
             <td onclick="att_question4_2.checked = true"><input type="radio" required id="att_question4_2" name="att_question3" value="1" onchange="checkAnswers()"></td>
           </tr>
         </table><br>
-      <button onclick="next()" class="button" disabled="true">Start</button>
+      <button onclick="next()" class="button" disabled>Start</button>
     </div>
     <div id="q_text"  style="display: none" class="page page4">
       <h2>Write down all brands that you have seen in the previous Instagram feed with a comma between them.<br>
@@ -434,7 +434,7 @@
             <td onclick="question20_2.checked = true"><input type="radio" required id="question20_2" name="question19" value="1" onchange="checkAnswers()"></td>
           </tr>
         </table>
-        <input type="submit" value="Submit" disabled="true">
+        <input type="submit" value="Submit" disabled>
     </div>
 </body>
 </html>
